--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       
 </head>
 <body>
+    <meta name="google-site-verification" content="JIJDGL-P3RZu1oa5Fn5skZ7UfCnNL9MdLqQFvYtXhhY" />
     <div class="main">
         <nav>
             
