--- a/manager/index.html
+++ b/manager/index.html
@@ -12,7 +12,7 @@
         <div class="main">
             <nav>
                 <div class="logo-area">
-                    <img src="./img/nekoアスレ.webp" alt="" class="logo">
+                    <img src="img/nekoアスレ.webp" alt="" class="logo">
                     <h2>NekoAthletic</h2>
                 </div>
     
@@ -29,6 +29,9 @@
             <div class="text">
                 <h1>運営メンバー</h1>
             </div>
+            <iframe src="カルーセル画像.html" width="500" height="350"　frameborder="0" class="karu-seru">
+
+            </iframe>
         </div>
     </body>
     
